# zen3d

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/: Batch.hpp  BinaryStream.hpp  Color.hpp  Config.hpp  Core.hpp  DebugDraw.hpp  Device.hpp  File.hpp  Font.hpp  Input.hpp  Math.hpp  Opengl.hpp  Pixmap.hpp  RenderState.hpp  RenderTarget.hpp  Shader.hpp  Texture.hpp  Types.hpp  Vertex.hpp
core/include/glad/: glad.h
core/src/: Batch.cpp  BinaryStream.cpp  Color.cpp  DebugDraw.cpp  Device.cpp  File.cpp  Font.cpp  Input.cpp  Math.cpp  Pixmap.cpp  RenderState.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  Utils.cpp  Utils.hpp  Vertex.cpp  cgltf.h  data.cc  glad.cpp  pch.h
main/: CMakeLists.txt
main/src/: main.cpp
